--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
         <div data-role="content">
             <ul id="listfaves" data-role="listview" data-inset="true">
                 <!-- dynamically-generated list items -->
+            </ul>
+            <div data-role="controlgroup" data-type="horizontal">
+                <a id="prevpage" data-role="button">previous</a>
+                <a id="nextpage" data-role="button">next</a>
             </div>
-            <a href="#tweetview" data-role="button">forward</div>
         </div>
         <!--<div data-role="footer"></div>-->        
     </div>
