Implemented tweet-pop-ups. blammo.

--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
         </div>
         <!--<div data-role="footer"></div>-->        
     </div>
-    <div data-role="page" id="tweetview">
+    <div data-role="dialog" id="tweetview">
         <div data-role="header"></div>
-        <div data-role="content">
-            <a href="#listview" data-role="button">back</div>
+        <div id=tweetviewcontent data-role="content">
+            
         </div>
+        <a href="#listpage" data-role="button">back</div>
         <!--<div data-role="footer"></div>-->        
     </div>
 
