Sorted out sorting bug.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </div>
         <div data-role="content">
             <div id=sortcontrols data-role="controlgroup" data-type="horizontal">
-                <a id=usersort sortby=user data-role="button" data-inline="true">@</a>
-                <a id=locationsort sortby=location data-role="button" data-inline="true">&</a>
-                <a id=datesort sortby=date data-role="button" data-inline="true">*</a>
+                <a id=usersort sortby=user data-role="button" data-inline="true">username</a>
+                <a id=locationsort sortby=location data-role="button" data-inline="true">geo-location</a>
+                <a id=datesort sortby=date data-role="button" data-inline="true">date</a>
             </div>
             <ul id="listfaves" data-role="listview" data-inset="true">
                 <!-- dynamically-generated list items -->
