added page for each tag with back button, minot fix

--- a/index.html
+++ b/index.html
@@ -45,10 +45,23 @@
     </div>
 
     <div data-role="page" id="hash">
-
-        <div data-role="content">
-            <a href="#listview" data-role="button">back</div>
+         <div data-role="content">
+            <a href="#listpage" data-role="button">back</a>
         </div>
-
+    </div>
+    <div data-role="page" id="at">
+         <div data-role="content">
+            <a href="#listpage" data-role="button">back</a>
+        </div>
+    </div>
+    <div data-role="page" id="loc">
+         <div data-role="content">
+            <a href="#listpage" data-role="button">back</a>
+        </div>
+    </div>
+    <div data-role="page" id="date">
+         <div data-role="content">
+            <a href="#listpage" data-role="button">back</a>
+        </div>
     </div>
 </body>
