Filter changes orientation on resize

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!--Home Page-->
-    <div data-role="page" id="listpage" data-theme="d">
+    <div data-role="page" id="listpage" data-theme="c">
         <div data-role="header" data-theme="d">
             <h1>Tweets by Twits</h1> 
         </div>
@@ -23,10 +23,10 @@
                     <div id=topleftspacer>
                     <p><br></p>
                     </div>
-                    <div id=filtercontrols data-role="controlgroup" data-type="vertical">
-                        <a data-role=button id = "hashfilter" href="#hash"><img src="number-sign.png" height="100" width="100"></a>
-                        <a data-role=button id = "atfilter" href="#at"><img src="at-sign.png" height="100" width="100"></a>
-                        <a data-role=button id = "locfilter" href="#loc"><img src="ampersand.png" height="100" width="100"></a>
+                    <div id=filtercontrols data-role="controlgroup" data-type="horizontal">
+                        <a data-role=button id="hashfilter" href="#hash"><img src="number-sign.png" height="100" width="100"/></a>
+                        <a data-role=button id="atfilter" href="#at"><img src="at-sign.png" height="100" width="100"/></a>
+                        <a data-role=button id="locfilter" href="#loc"><img src="ampersand.png" height="100" width="100"/></a>
                     </div> 
                 </div>
                 <div class="ui-block-b">
