Fixed text wrapping for tweets

--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
                         <a class=sortbutton id=locationsort sortby=location data-role="button" data-inline="true">geo-location</a>
                         <a class=sortbutton id=datesort sortby=date data-role="button" data-inline="true">date</a>
                     </div>
-                    <ul data-role="listview" data-inset="true">
-                        <li>
-                            <p id="listfaves"></p>
-                            <p class="ui-li-aside"></p>
-                        </li>
+                    <ul data-role="listview" data-inset="true" id="listfaves">
                         <!-- dynamically-generated list items -->
                     </ul>
                     <div data-role="controlgroup" data-type="horizontal">
