Fixed button bug.

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 			<h2>Sort by ...</h2>
 			<div data-role="navbar">
 				<ul>
-					<li><a class=sortbutton id=usersort sortby=user data-role="button">Username</a></li>
-					<li><a class=sortbutton id=locationsort sortby=location data-role="button">Location</a></li>
-					<li><a class=sortbutton id=datesort sortby=date data-role="button">Date</a></li>
+					<li><a id=usersort sortby=user data-role="button">Username</a></li>
+					<li><a id=locationsort sortby=location data-role="button">Location</a></li>
+					<li><a id=datesort sortby=date data-role="button">Date</a></li>
 				</ul>
 			</div><!-- /navbar -->
 		</div><!-- /header -->
-
+		
         <div data-role="content">
 			<ul data-role="listview" data-inset="true" id="listfaves">
 			  <!-- dynamically-generated list items -->
