Fixed bug with reset button.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <div data-role="header" style="overflow:hidden;" id=filtercontrols>
 			<h1>Filter by ...</h1>
-			<a href="#reset" data-icon="gear" class="ui-btn-right">Reset</a>
+			<a id="reset" data-icon="gear" class="ui-btn-right">Reset</a>
 			<div data-role="navbar">
 				<ul>
 					<li><a id="hashfilter" href="#hash">Hashtag</a></li>
