Made page selector centered.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			  <!-- dynamically-generated list items -->
             </ul>
         </div>
-        <div data-role="controlgroup" data-type="horizontal">
+        <div id="pagination" data-role="controlgroup" data-type="horizontal" data-mini="true">
 		  <a id="prevpage" data-role="button">previous</a>
           <a id="nextpage" data-role="button">next</a>
         </div>
